# webhook-delivery

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docker.yml  integration.yml
alembic/: env.py
alembic/versions/: .gitkeep  cd5d294a1e0b_initial_schema.py
app/: __init__.py  main.py
app/api/: __init__.py  deps.py  middleware.py  openapi_examples.py
app/api/routes/: __init__.py  auth.py  deliveries.py  events.py  health.py  subscribers.py
app/core/: __init__.py  config.py  logging.py  security.py
app/db/: __init__.py  models.py  schemas.py  session.py
app/observability/: __init__.py  metrics.py
app/services/: __init__.py  delivery_service.py  subscriber_service.py
app/tasks/: __init__.py  celery_app.py  delivery.py  fanout.py
docker/: Dockerfile  Dockerfile.worker  docker-compose.dev.yml  docker-compose.yml  prometheus.yml
docs/: ROADMAP.md  SSOT.md  runbook.md
docs/adr/: ADR-001-celery-over-asyncio-queue.md  ADR-002-dual-sqlalchemy-drivers.md  ADR-003-jwt-service-auth.md  ADR-004-backoff-schedule.md  ADR-005-hard-delete-subscribers.md
scripts/: smoke_test.sh
tests/: __init__.py  conftest.py  factories.py
tests/integration/: __init__.py  conftest.py  test_auth.py  test_deliveries.py  test_delivery_flow.py  test_events.py  test_fanout_integration.py  test_subscribers.py
tests/unit/: __init__.py  test_celery_app.py  test_config.py  test_delivery.py  test_delivery_service.py  test_docker_build.py  test_error_handlers.py  test_fanout.py  test_health.py  test_logging.py  test_metrics.py  test_middleware.py  test_models.py  test_schemas.py  test_security.py  test_session.py  test_subscriber_service.py
