[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "webhook-delivery"
version = "0.1.0"
description = "production-grade async webhook delivery service"
requires-python = ">=3.12"

# --- ruff ---

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]
extend-exclude = ["alembic/versions/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "ANN", # flake8-annotations
]
ignore = [
    "S101",   # use of assert (needed for pytest)
    "S105",   # hardcoded password (false positives in test fixtures)
    "S106",   # hardcoded password in function args
    "ANN401", # Any is unavoidable for celery bound-task self and dynamic dispatch
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# --- mypy ---

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# --- pytest ---

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-report=xml"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "docker: docker image build tests (slow, require docker daemon). enable with RUN_DOCKER_TESTS=1",
]

# --- coverage ---

[tool.coverage.run]
source = ["app"]
omit = ["app/db/migrations/*", "*/alembic/*"]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
